lock idenpotency
